--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <div class="header-underline"></div>
             <p class="text-lg text-gray-600 mt-4 font-medium font-sans tracking-wide">
                 Hover to see the action. Click to reveal the legend.
+				<p class="text-lg text-gray-600 font-medium font-sans tracking-wide">
+					@Добреля Олександр
+				</p>
             </p>
         </div>
     </header>
